<resources>
    <string name="app_name">Taured</string>
    <string name="title_activity_ver">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_principal_admin">Administrador principal</string>

    <string name="navigation_drawer_open">Abrir navegador</string>
    <string name="navigation_drawer_close">Cerrar navegador</string>

    <string name="action_settings">Opciones</string>
    <string name="title_activity_principal_user">PrincipalUser</string>
    <string name="login_title">Ingreso de usuario</string>
    <string name="btn_login">Ingresar</string>
    <string name="edit_key">Clave</string>
    <string name="edit_user">Usuario</string>
    <string name="principal_tit">Administrador del Sistema</string>
    <string name="nuevo_pass">Nueva clave</string>
    <string name="repeat_pass">Repetir nueva clave</string>
    <string name="guardar_nueva_clave">Guardar nueva contraseña</string>
    <string name="config_sistema">Configuración del Sistema</string>
    <string name="menu_clave">Editar Clave</string>
    <string name="menu_ventana">Ventanas</string>
    <string name="main_rol">Roles</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="ingreso_falla">El usuario o clave son erroneos.</string>
    <string name="dato_vacio">Complete los campos.</string>
    <string name="no_disponible">Contacto no disponible</string>
    <string name="admin_clave">Gestión de la clave.</string>
    <string name="admin_ventana">Gestión de Ventanas</string>
    <string name="admin_rol">Gestión de Roles.</string>
    <string name="admin_sesion">Sesión finalizada.</string>
    <string name="ventana_tit">Administrador del Sistema</string>
    <string name="item1">Nombre de la ventana padre</string>
    <string name="item3">Url de la vista</string>
    <string name="item4">Url del Controlador</string>
    <string name="ventana_reg">Registrar</string>
    <string name="item2">Nombre de la ventana</string>
    <string name="ven_nombre">Nombre</string>
    <string name="ven_clave">Clave</string>
    <string name="ven_url">Url vista</string>
    <string name="ven_icon">Acciones</string>
    <string name="item5">Nombre de rol</string>
    <string name="item6">Descripción</string>
    <string name="item7">Más funciones</string>
    <string name="admin_intro">Bienvenido a la página del administrador, aquí podrás gestionar los roles de los usuario, las vistas(ventanas) y la vuestra propia contraseña.</string>
    <string name="admin_detail">Sesión: Administrador</string>
    <string name="admin_detail_2">Cargo: Administrador del Sistema</string>
    <string name="nav_1">Organización</string>
    <string name="nav_2">Modo organización: Gerencia</string>
    <string name="opc1">Lista de Webs</string>
    <string name="opc2">Sescciones</string>
    <string name="opc3">Productos</string>
    <string name="opc4">Servicios</string>
    <string name="opc5">Otros</string>
    <string name="opc6">Cerrar sesión</string>
    <string name="web_list">Gestionar webs</string>
    <string name="web_secciones">Gestionar secciones</string>
    <string name="web_productos">Gestionar productos</string>
    <string name="web_servicios">Gestionar servicios</string>
    <string name="web_acc">Acción</string>
    <string name="web_des">Descripción</string>
    <string name="web_tit">Título</string>
    <string name="web_dom">Dominio</string>
    <string name="web_mis_pag">Mis páginas web</string>
    <string name="sec_sec_tit">Pagina Web: ShoppingUP</string>
    <string name="sec_num">Orden</string>
    <string name="sec_url">Ruta</string>
    <string name="pro_nom">Nombre</string>
    <string name="pro_est">Estado</string>
    <string name="pro_pre">Precio</string>
    <string name="btn_edti">Editar</string>
    <string name="a1">Agregar sitio web</string>
    <string name="a2">Agregar servicio</string>
    <string name="a3">Agregar sección</string>
    <string name="a4">Agregar producto</string>
    <string name="btn_guard">Guardar</string>
    <string name="tit_1">Agregar Sección</string>
    <string name="tit_2">Agregando web</string>
    <string name="title_activity_consumidor">Consumidor</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_sec">Nosotros</string>
    <string name="title_sec2">Servicios</string>
    <string name="title_sec3">Productos</string>
    <string name="title_sec1">Home</string>
    <string name="data_com">Datos de la empresa</string>
    <string name="cod_com">Código</string>
    <string name="nam_com">Nombre</string>
    <string name="des_com">Descripción</string>
    <string name="cor_com">Correo</string>
</resources>
