<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:layout_marginTop="60dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:textSize="10pt"
            android:textAlignment="center"
            android:text="@string/tit_1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/sec_num"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/sec_num"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="3"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:text="@string/web_tit"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/web_tit"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:text="@string/sec_url"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/sec_url"
                android:layout_weight="2"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_guard"/>
    </LinearLayout>

    <include
        layout="@layout/app_bar_principal_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_principal_user"
        app:menu="@menu/activity_principal_user_drawer" />

</android.support.v4.widget.DrawerLayout>
