<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context="com.example.miguel.taured.GestionarServicios">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Shopping UP"
            android:paddingTop="60dp"
            android:textSize="10pt"
            android:textAlignment="center"
            android:paddingVertical="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="8pt"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:text="@string/pro_nom"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="Servicio 1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="Servicio 2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="Servicio 3"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="8pt"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:text="@string/web_des"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="planchado"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="Teñido"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="Secado"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="8pt"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:text="@string/pro_pre"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="7.00"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="79.90"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="100.00"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="8pt"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:text="@string/pro_est"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="A"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="A"/>
                <TextView
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="A"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="8pt"
                    android:textAlignment="center"
                    android:padding="10dp"
                    android:text="@string/web_acc"/>
                <Button
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="@string/btn_edti"/>
                <Button
                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="50dp"
                    android:textSize="6pt"
                    android:paddingBottom="15dp"
                    android:text="@string/btn_edti"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/a2"/>
    </LinearLayout>

    <include
        layout="@layout/app_bar_principal_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_principal_user"
        app:menu="@menu/activity_principal_user_drawer" />
</android.support.v4.widget.DrawerLayout>
